RDM-12659 - Checking document id is accessible to user (#1557)
* Checking document id is accessible to user

* Updated FT response text